fix: cors to mobile app on auth service